tests/NormalTests/paczka1/fuzzy1/16948575.err
Error in line 9: m0on S18 66,4
Error in line 11: TWVQc A378 17,1
Error in line 28: R1B0 A65 69,3
Error in line 31: R1B0 A25 0,1
Error in line 34: R1B0 A65 30,1
